--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,8 @@ html, body {
     grid-row: 1;
     grid-column: 2;
     background-color: white;
-    box-shadow: 0px 2px 10px 2px black; /* not wokring */
+    box-shadow: 2px 2px 5px 1px rgb(0, 0, 0, 0.2);
+    z-index: 1000;
 }
 
 .search-bar {
